@startuml

left to right direction
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam nodesep 100
skinparam ranksep 100

'==================== OBSERVER ====================
package "Observer" {

interface Observer {
    +update(message: String)
}

interface Subject {
    +addObserver(o: Observer)
    +removeObserver(o: Observer)
    +notify(message: String)
}

class NotificationService <<Singleton>> {
    -instance : static
    -observers : List<Observer>
    +getInstance() : NotificationService
    +addObserver(o: Observer)
    +removeObserver(o: Observer)
    +notify(message: String)
}

class Admin {
    +update(message: String)
}

class Customer {
    +update(message: String)
}

}

'==================== STRATEGY ====================
package "Strategy (Payment)" {

interface PaymentMethod {
    +pay(amount : double)
}

class CreditCard implements PaymentMethod {
    +pay(amount : double)
}

class DebitCard implements PaymentMethod {
    +pay(amount : double)
}

class Payment {
    -paymentDate : Date
    -amount : double
    +processPayment()
}

}

'==================== COMMAND ====================
package "Command" {

interface Command {
    +execute()
}

class Invoker {
    -history : List<Command>
    +executeCommand(c: Command)
}

class CreateReservationCommand {
    -reservation : Reservation
    +execute()
}

class CancelReservationCommand {
    -reservation : Reservation
    +execute()
}

}

'==================== ITERATOR ====================
package "Iterator" {

interface Iterator {
    +hasNext() : boolean
    +next() : Object
}

interface Aggregate {
    +createIterator() : Iterator
}

class MaintenanceIterator {
    -maintenances : List<Maintenance>
    -position : int
    +hasNext() : boolean
    +next() : Object
}

}

'==================== SINGLETON ====================
package "Singleton" {

class VehicleManager <<Singleton>> {
    -instance : static
    -vehicles : List<Vehicle>
    +getInstance() : VehicleManager
    +addVehicle(v: Vehicle)
    +getVehicles() : List<Vehicle>
}

class ReservationManager <<Singleton>> {
    -instance : static
    -reservations : List<Reservation>
    +getInstance() : ReservationManager
    +createReservation(r: Reservation)
    +getReservations() : List<Reservation>
}

}

'==================== DOMAIN ====================
package "Domain" {

class Maintenance {
    -startDate : Date
    -endDate : Date
    -status : String
    -maintenanceType : String
    +changeStatus()
    +notifyChange()
}

class Branch {
    -name : String
    -address : String
    -city : String
    -phone : String
    -schedule : String
    -vehicles : List<Vehicle>
    +addVehicle()
}

class User {
    -username : String
    -email : String
    -phone : String
    -password : String
    -userType : String
    +update(message: String)
}

class Insurance {
    -expirationDate : Date
    -vehicle : Vehicle
    +updatePayment()
    +notifyExpiration()
}

class GPS {
    -serial : String
    -model : String
    -available : Boolean
    +assignToRental()
    +release()
    +isAvailable() : Boolean
}

class Route {
    -origin : String
    -destination : String
    -distance : double
    -duration : double
}

class Location{
    -latitude : double
    -longitude : double
    -timestamp : DateTime
}

class Rental {
    -startDate : Date
    -endDate : Date
    -customer : Customer
    -vehicle : Vehicle
    -routes : List<Route>
    +notifyRentalStart()
    +notifyRentalEnd()
    +addRoute()
}

class Reservation {
    -customer : Customer
    -vehicle : Vehicle
    -responsibleName : String
    -startDate : Date
    -endDate : Date
    -pickupLocation : String
    -returnLocation : String
    -pickupTime : String
    -returnTime : String
    -totalValue : double
    +calculateTotal()
    +notifyUpcomingReservation()
}

class Contract {
    -contractDate : Date
    -vehicleConditionStart : String
    -vehicleConditionEnd : String
    -terms : String
    -amountToPay : double
}

class Maintenancetype{
    -name : String
    -description : String
}

}

'==================== RELATIONSHIPS ====================

'Observer — NotificationService es el único Subject
NotificationService ..|> Subject
Admin               ..|> Observer
Customer            ..|> Observer
Subject             -->  Observer

'Clases de dominio disparan notificaciones
Maintenance  --> NotificationService : triggers
Insurance    --> NotificationService : triggers
Reservation  --> NotificationService : triggers
Rental       --> NotificationService : triggers

'Command
CreateReservationCommand ..|> Command
CancelReservationCommand ..|> Command
Invoker --> Command
Command --> Reservation

'Strategy
Payment --> PaymentMethod

'Iterator
MaintenanceIterator ..|> Iterator
Vehicle             ..|> Aggregate
MaintenanceIterator -->  Maintenance

'Factory
Vehicle <|-- HeavyVehicle
Vehicle <|-- CasualVehicle
Vehicle <|-- OffRoadVehicle

'Singleton
VehicleManager     --> Vehicle
ReservationManager --> Reservation

'Domain — herencia
User <|-- Customer
User <|-- Admin

'Domain — relaciones
Branch      "1" o--  "0..*" Vehicle      : stores
Vehicle     "1" o--  "0..*" Maintenance  : has
Vehicle     "1" *--  "1"    Insurance    : includes
Customer    "1" <--  "0..*" Reservation  : makes
Reservation "1" -->  "1"    Vehicle      : reserves
Reservation "1" *--  "1"    Contract     : generates
Contract    "1" *--  "1"    Payment      : includes
Payment     -->              PaymentMethod
maintenanceType "1" <-- "0..*" Maintenance : defines

'GPS — agregación a Rental
Rental "1" o--  "0..1" GPS   : uses
Rental "1" *--  "1..*" Route : records
GPS    "1" -->  "0..*" Route : generates

Rental "1" o-- "1" Customer  : involves
Rental "1" o-- "1" Vehicle   : involves
Rental "1" --> "1" Reservation : originates from

@enduml